<package format="3">
  <name>playground</name>
  <version>0.1.0</version>
  <description>Rust ROS2 Playground</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build tool dependency for using ament_cargo to build Rust packages -->
  <buildtool_depend>ament_cargo</buildtool_depend>

  <!-- Dependencies needed for Rust-ROS interaction and custom message support -->
  <depend>rclrs</depend>
  <depend>rosidl_runtime_rs</depend>
  <depend>std_msgs</depend>
  <depend>ad_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
