<?xml version="1.0"?>
<package format="3">
  <name>mission_manager</name>
  <version>0.0.0</version>
  <description>The scenario runner package</description>

  <maintainer email="sjeong99@hanyang.ac.kr">Seongjae Jeong</maintainer>
  <maintainer email="yuseungna@hanyang.ac.kr">Yuseung Na</maintainer>
  <license>TODO</license>
      
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>ad_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rviz_2d_overlay_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>